@startuml
left to right direction

skinparam ClassBackgroundColor #FFFFFF

!include class-diagram.puml

'SpanInfo
remove SpanInfo
remove Heading
remove Bold
remove Italic
remove Image
remove Link
remove LinkType
remove TextRange
remove CodeInline
remove CodeBlock
remove Blockquote
remove ListItem

'FrontMatter
remove FrontMatter
remove FrontMatterValue
remove Scalar
remove StringList

'TextState
'remove TextState
'remove MutableTextState
'remove TextSelection
'remove TextUndoState

'Settings
remove Settings
remove ValidSyncProvider

'Project
remove Project
remove RelativePath
remove FileSystemPath
remove ProjectFile
remove Attachment
remove AttachmentType
remove ProjectAttachment
remove InvalidProjectAttachment
remove PendingAttachment
remove MessageBody
remove Note

'SearchQuery
remove SearchQuery
remove SortBy

'LinkPreview
remove LinkPreview

'Repositories
remove ProjectRepository
remove AndroidProjectRepository
remove NoteDao
remove ProjectDao
remove LinkPreviewDao
remove NoteEntity
remove NoteEntityFts
remove ProjectEntity
remove LinkPreviewEntity
remove NoteDb
remove LinkPreviewRepository
remove AndroidLinkPreviewRepository
remove SyncRepository
remove YandexSyncRepository
remove SyncRepositoryFactory
remove SettingsRepository
remove AndroidSettingsRepository
remove FileExistsStrategy

'UseCases
remove UseCase
remove FlowUseCase
remove GetMessagesUseCase
remove GetMessagesInput
remove GetNotesUseCase
remove GetNotesInput
remove CreateNoteUseCase
remove CreateNoteInput
remove ApplyEditorEventInput
remove ApplyEditorEventUseCase
remove GetRealSpanInfoLinkTypeUseCase
remove GetRealSpanInfoLinkTypeInput
remove GetPinnedMessagesUseCase
remove GetPinnedMessagesInput
remove ToggleNoteTagUseCase
remove ToggleNoteTagInput
remove SyncProjectUseCase
remove SyncProjectInput
remove SendNoteInput
remove SendNoteUseCase
remove DeleteNoteUseCase
remove DeleteNoteInput
remove GetNoteInput
remove GetNoteUseCase
remove RenameNoteUseCase
remove RenameNoteInput
remove SaveNoteTextUseCase
remove SaveNoteTextInput
remove SelectProjectInput
remove SelectProjectUseCase
remove SyncDatabaseInput
remove SyncDatabaseUseCase
remove LoadSavedProjectUseCase
remove SetSettingsUseCase
remove SetSettingsInput
remove GetLinkPreviewUseCase
remove GetLinkPreviewInput
remove GetSettingsUseCase
remove GetSettingsInput
remove GetAllTagsUseCase
remove GetAllTagsInput
remove ApplySearchEventUseCase
remove ApplySearchEventInput
remove CopyToAssetsUseCase
remove CopyToAssetsInput
remove GetProjectFileUseCase
remove GetProjectFileInput

'MarkdownParser
remove MarkdownParser

class ComposeTextUndoState {
    + undoState: UndoState
}

class ComposeTextState {
    + state: TextFieldState
}

class ComposeMutableTextState {
    + state: TextFieldBuffer
}

ComposeTextState ..|> TextState
ComposeMutableTextState ..|> MutableTextState
ComposeTextUndoState ..|> TextUndoState

ComposeTextState ..> ComposeMutableTextState
ComposeTextState "1" *-- "1" ComposeTextUndoState

@enduml